tests/pass/Modulus.java
package pass;

public class Modulus {
  public int modulus(int x, int y) {
     return x % y;
  }
}
