tests/fail/Modulus.java
package fail;

import java.lang.System;

public class Modulus {

  public static void main(String[] args ) {
    12 % "here";
  }

}
